syntax = "proto3";

package go_project_template.user.v1;

import "proto/v1/user/user.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/vladjong/go-project-template/pkg/go-project-template/v1/user;user";

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }

  rpc List(google.protobuf.Empty) returns (ListResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }
}

message CreateRequest {
  UserInfo info = 1;
}

message CreateResponse {
  User user = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message ListResponse {
  repeated User users = 1;
}
